# firefly-vcut

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: 01_danmaku.ipynb
src/firefly_vcut/: __init__.py  bilibililocal.py  cmdline.py  config.py  db.py  dblocal.py  fuzz.py  retry.py  transcribe.py  types.py  wbi.py
src/firefly_vcut/bilibili/: __init__.py  buvid3.py  series.py  video.py  wbi.py
src/firefly_vcut/db/: __init__.py  conn.py  occurrence.py  recording.py  song.py
src/firefly_vcut/modal/: app.py  cron.py  occurrence.py  recording.py  stream.py  transcribe.py  video.py
