[project]
name = "firefly-vcut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "click>=8.2.1",
    "jupyter>=1.1.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.3",
    "modal>=1.1.1",
    "openai-whisper>=20250625",
    "polars>=1.31.0",
    "prisma>=0.15.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pysubs2>=1.8.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
vcut = "firefly_vcut.cmdline:vcut"
